# gradcamfaith

./: .gitignore  README.md  analysis.py  analysis_feature_case_studies.py  analysis_heads.ipynb  analyze_dominant_features.py  analyze_feature_distributions.py  analyze_feature_metrics.py  analyze_important_features_by_class.py  analyze_rare_features.py  analyze_ratio_patterns.py  analyze_saco_features.py  attribution_analysis.ipynb  attribution_binning.py  build_boost_mask_improved.py  build_boost_mask_optimized.py  claude.md  clip_classifier.py  config.py  corr_dict.py  corr_dict_analysis.py  correlation_analysis.py  data_types.py  dataset_config.py  dataset_converters.py  dict.ipynb  download_paper_sae.py  evalauate_skin.py  explanation.py  extract_sae_activations.py  faithfulness.py  faithfulness_comparison.py  faithfulness_unified.py  feature_analysis.py  feature_analysis_rewrite.py  feature_case_studies.py  feature_gradient_gating.py  find_features.py  head_analysis.py  head_analysis_visualization.py  (+39 more)
attribution_model/: saco_refinement.py
tests/: test_faithfulness_correlation.py  test_four_phases_integration.py  test_pixel_flipping.py  test_saco.py
translrp/: ViT_LRP.py  ViT_new.py
vit/: attribution.py  model.py  preprocessing.py
